update gradle file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,14 @@ android {
     productFlavors {
         xiaomi {
         }
+        baidu {
+        }
+    }
+}
+
+task mytask << {
+    exec {
+        commandLine '../gradlew', 'assembleRelease'
     }
 }
 
