--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
-            output.outputFile = new File(output.outputFile.parent,"release")
+            if (output.outputFile.name.contains("debug")){
+                output.outputFile = new File(output.outputFile.parent,"debug")
+            }else if(output.outputFile.name.contains("release")){
+                output.outputFile = new File(output.outputFile.parent,"release")
+            }else if(output.outputFile.name.contains("unaligned")){
+                output.outputFile.delete()
+            }
             output.outputFile = new File(
                     output.outputFile,
                     "${variant.productFlavors[0].name}-${variant.buildType.name}-${variant.versionName}.apk".toLowerCase())
