--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         versionName "1.0"
 
         resValue "string", "app_name", "GradleUse"
+        manifestPlaceholders = [ MAIN_ACTIVITY:"com.example.caizenghui.gradleuse.MainActivity"]
     }
     buildTypes {
         release {
@@ -52,10 +53,12 @@ android {
         xiaomi {
             applicationId "com.example.caizenghui.gradleuse.xiaomi"
             resValue "string", "app_name", "GradleUse_xiaomi"
+            manifestPlaceholders = [ MAIN_ACTIVITY:"com.example.caizenghui.gradleuse.XiaomiMainActivity"]
         }
         baidu {
             applicationId "com.example.caizenghui.gradleuse.baidu"
             resValue "string", "app_name", "GradleUse_baidu"
+            manifestPlaceholders = [ MAIN_ACTIVITY:"com.example.caizenghui.gradleuse.BaiduMainActivity"]
         }
     }
 }
