--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,12 @@ android {
                     output.outputFile,
                     "${variant.productFlavors[0].name}-${variant.buildType.name}-${variant.versionName}.apk".toLowerCase())
         }
+
+        if (variant.productFlavors[0].name.contains('xiaomi')){
+            variant.javaCompile.source = variant.javaCompile.source.filter { p ->
+                return !p.getPath().contains('exclude')
+            }
+        }
     }
     productFlavors {
         xiaomi {
