--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,11 @@ android {
         }
     }
     productFlavors {
+        common {
+            applicationId "com.example.caizenghui.gradleuse"
+            resValue "string", "app_name", "GradleUse"
+            manifestPlaceholders = [ MAIN_ACTIVITY:"com.example.caizenghui.gradleuse.activity.MainActivity"]
+        }
         xiaomi {
             applicationId "com.example.caizenghui.gradleuse.xiaomi"
             resValue "string", "app_name", "GradleUse_xiaomi"
@@ -77,4 +82,5 @@ task mytask << {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile project(':barscanner')
 }
