--- a/weixinbase/src/main/AndroidManifest.xml
+++ b/weixinbase/src/main/AndroidManifest.xml
@@ -2,38 +2,39 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.sourceforge.weixinbase"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application
-        android:label="@string/app_name" >
-
+    <application android:label="@string/app_name">
         <activity
             android:name=".SendToWXActivity"
             android:label="@string/app_name"
-            android:theme="@style/MMTheme.Basic"/>
-
+            android:theme="@style/MMTheme.Basic" />
         <activity
             android:name=".GetFromWXActivity"
             android:label="@string/app_name"
-            android:theme="@style/MMTheme.Basic"/>
-
+            android:theme="@style/MMTheme.Basic" />
         <activity
             android:name=".ShowFromWXActivity"
             android:label="@string/app_name"
-            android:theme="@style/MMTheme.Basic"/>
+            android:theme="@style/MMTheme.Basic" />
 
         <receiver
             android:name=".AppRegister"
-            android:permission="com.tencent.mm.plugin.permission.SEND" >
+            android:permission="com.tencent.mm.plugin.permission.SEND">
             <intent-filter>
                 <action android:name="com.tencent.mm.plugin.openapi.Intent.ACTION_REFRESH_WXAPP" />
             </intent-filter>
         </receiver>
 
+        <activity
+            android:name=".WXMainActivity"
+            android:label="@string/title_activity_wxmain">
+
+        </activity>
     </application>
 
 </manifest>
