--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,18 +67,23 @@ android {
         common {
             applicationId "com.example.caizenghui.gradleuse"
             resValue "string", "app_name", "GradleUse"
-            manifestPlaceholders = [ MAIN_ACTIVITY:"com.example.caizenghui.gradleuse.activity.MainActivity"]
+            manifestPlaceholders = [MAIN_ACTIVITY: "com.example.caizenghui.gradleuse.activity.MainActivity"]
 //            manifestPlaceholders = [ MAIN_ACTIVITY:"com.example.caizenghui.gradleuse.wxapi.WXEntryActivity"]
         }
         xiaomi {
             applicationId "com.example.caizenghui.gradleuse.xiaomi"
             resValue "string", "app_name", "GradleUse_xiaomi"
-            manifestPlaceholders = [ MAIN_ACTIVITY:"com.example.caizenghui.gradleuse.XiaomiMainActivity"]
+            manifestPlaceholders = [MAIN_ACTIVITY: "com.example.caizenghui.gradleuse.XiaomiMainActivity"]
         }
         baidu {
             applicationId "com.example.caizenghui.gradleuse.baidu"
             resValue "string", "app_name", "GradleUse_baidu"
-            manifestPlaceholders = [ MAIN_ACTIVITY:"com.example.caizenghui.gradleuse.BaiduMainActivity"]
+            manifestPlaceholders = [MAIN_ACTIVITY: "com.example.caizenghui.gradleuse.BaiduMainActivity"]
+        }
+        wx {
+            applicationId "com.example.caizenghui.gradleusedebug"
+            resValue "string", "app_name", "weixin"
+            manifestPlaceholders = [MAIN_ACTIVITY: "com.example.caizenghui.gradleuse.activity.MainActivity"]
         }
     }
 }
