move WXEntryActivity to weixinbase module

--- a/weixinbase/src/main/AndroidManifest.xml
+++ b/weixinbase/src/main/AndroidManifest.xml
@@ -35,6 +35,31 @@
             android:label="@string/title_activity_wxmain">
 
         </activity>
+
+        <activity
+            android:name="com.example.caizenghui.gradleuse.wxapi.WXEntryActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="sdksample" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.caizenghui.gradleusedebug.wxapi.WXEntryActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="sdksample" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
