add alibase module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,4 +101,5 @@ dependencies {
     compile project(':share')
     compile project(':zxing')
     compile project(':weixinbase')
+    compile project(':alibase')
 }
