add include merge viewstub

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,5 @@ dependencies {
     compile project(':zxing')
     compile project(':weixinbase')
     compile project(':intentservice')
+    compile project(':merge_include_viewstub')
 }
