--- a/merge_include_viewstub/src/main/AndroidManifest.xml
+++ b/merge_include_viewstub/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity android:name=".MainActivity" />
-        <activity android:name=".IncludeActivity"></activity>
+        <activity android:name=".IncludeActivity" />
+        <activity android:name=".MergeActivity"></activity>
     </application>
 
 </manifest>
