--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':share', ':zxing', ':weixinbase', ':intentservice', ':merge_include_viewstub'
+include ':app', ':share', ':zxing', ':weixinbase', ':intentservice', ':merge_include_viewstub', ':bounceview'
